20081021
	/appl/cmd/auth/ai2key.b new command to convert authinfo files to factotum keys
	/appl/cmd/auth/factotum/proto/infauth.b allow new key format
20081019
	/appl/cmd/man2html.b implement "\ " => "&nbsp;"
	/man/3/prog change way a literal " was formatted
	/man/8/srv deleted (obsolete)
	removed reference to srv(8) from sys-pctl(2)
20080909
	/appl/cmd/puttar.b add extra empty block at end of archive as required by format
20080907
	include some changes from acme-sac in emu/Nt/devfs.c; need further control of usesec (or discard it)
20080723
	rename Inferno's yacc to iyacc to avoid clash with system's own (now that Linux and others distribute it)
20080707
	update emu/port/win-x11a.c (fix someone's earlier patch to stop using undefined value)
	emu/port/main.c mark obsolete options and remove from usage
20080705
	update utils/sed, eliminating anonymous unions (just by commenting them out, to keep source in step with 9)
		and several other changes for portability
20080703
	remove anonymous unions (and unused structs) from unpacking structures in emu/Nt/vlrt.c, not that it's used
20080617
	win-x11a.c add sqweek's change to pass on KeyRelease values (but perhaps 1-byte values are no longer enough?)
20080614
	change os/port/devcons.c to use error not panic in sysfatal
20080612
	change several libmp/port functions to use sysfatal not abort
	change emu/port/main.c to have sysfatal call error not exit
20080611
	Keyring->dhparams to use DSAprimes in special case
	IPint.random now ignores minint (will go next revision)
	BigInt -> mpint*
	checkIPint in libinterp/ipint.c
	default keys in auth/createsignerkey are 1024 not 512 bits
	update os/boot/pc
20080610
	push sh-mload(1) and changes to sh-expr(1)
20080609
	_tas type changed from ulong to int
20080530
	issue 91: _declspec changed to __declspec in Nt files
	issue 92: argv0 declaration changed to extern from static in emu/Nt/win.c
20080529
	limbo/stubs.c: allow pick adt types
20080528